@@ -1,7 +1,6 @@
 package com.Ntra.ProGig.Service;
 
 import com.Ntra.ProGig.Dto.UserDto;
-import com.Ntra.ProGig.Entity.Skills;
 import com.Ntra.ProGig.Entity.User;
 import com.Ntra.ProGig.Entity.UserRole;
 import com.Ntra.ProGig.Exception.NoContentException;
@@ -11,7 +10,6 @@ import org.modelmapper.convention.MatchingStrategies;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -20,19 +18,20 @@ public class UserService {
     @Autowired
     private UserRepo repo;
 
+
     @Autowired
     private ModelMapper modelMapper;
 
     public List<UserDto> getAllUser(){
         try {
-            List<User> users = this.repo.findAll();
-
-            return users.stream().map(this::UserToDto).toList();
-        }
-        catch (NoContentException e){
-            throw  new NoContentException("Data is not present");
+            List<User> users =this.repo.findAll();
+            List<UserDto> userDtos = users.stream().map(user -> this.UserToDto(user)).collect(Collectors.toList());
+            return userDtos;
+        }catch (NoContentException e){
+            throw new NoContentException("No_Content");
         }
     }
+
 
     public User saveUser(User user) {
         User createUser = this.repo.save(user);
